Implement Email Template managemenet and plug it to the back end with the minimal variables
